profilelist1exp/unpackaged/objects/Campaign_Member_Status__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LM2.0_Mapping of Lead action and corresponding Campaign Member status.</description>
    <fields>
        <fullName>CM_Status__c</fullName>
        <label>CM Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>Comma separated values. e.g. Direct, Channel</description>
        <inlineHelpText>Comma separated values. e.g. Direct, Channel</inlineHelpText>
        <label>Identifier</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Lead Status Reason</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Lead Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Member Status</label>
</CustomObject>